--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>yocache-parent</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
-    <name>yocache-parent</name>
+    <name>yocache</name>
     <description>small file disk cache</description>
     <url/>
     <scm>
@@ -27,6 +27,7 @@
         <kotlin.version>2.1.0</kotlin.version>
         <guava.version>33.3.1-jre</guava.version>
         <netty.version>4.1.115.Final</netty.version>
+        <lombok.version>1.18.36</lombok.version>
     </properties>
     <modules>
         <module>server</module>
@@ -65,6 +66,12 @@
                 <artifactId>component</artifactId>
                 <version>${revision}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -79,12 +86,18 @@
                     <configuration>
                         <compilerPlugins>
                             <plugin>spring</plugin>
+                            <plugin>lombok</plugin>
                         </compilerPlugins>
                     </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.jetbrains.kotlin</groupId>
                             <artifactId>kotlin-maven-allopen</artifactId>
+                            <version>${kotlin.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.jetbrains.kotlin</groupId>
+                            <artifactId>kotlin-maven-lombok</artifactId>
                             <version>${kotlin.version}</version>
                         </dependency>
                     </dependencies>
@@ -140,21 +153,22 @@
                     </executions>
                     <configuration>
                         <annotationProcessorPaths>
-                            <path>
+                            <annotationProcessorPath>
                                 <groupId>org.springframework.boot</groupId>
                                 <artifactId>spring-boot-configuration-processor</artifactId>
-                            </path>
-                            <path>
+                            </annotationProcessorPath>
+                            <annotationProcessorPath>
                                 <groupId>org.projectlombok</groupId>
                                 <artifactId>lombok</artifactId>
-                            </path>
+                                <version>${lombok.version}</version>
+                            </annotationProcessorPath>
                         </annotationProcessorPaths>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.graalvm.buildtools</groupId>
-                    <artifactId>native-maven-plugin</artifactId>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.graalvm.buildtools</groupId>-->
+<!--                    <artifactId>native-maven-plugin</artifactId>-->
+<!--                </plugin>-->
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
@@ -170,5 +184,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
